@@ -5,13 +5,6 @@
 # This will be autogenerated by configure to use the correct name
 # for the vfs dynamic library.
 
-# We don't really want to throw an error with older versions of
-# Tcl, they should just ignore us.
-if {[package provide Tcl] < 8.4} {
-    return
-}
-package require Tcl 8.4
-
 package ifneeded vfs @PACKAGE_VERSION@ [list source [file join $dir vfs.tcl]]
 
 package ifneeded starkit 1.3.3 [list source [file join $dir starkit.tcl]]
